tests/ui/cross/cross-file-errors/main.stderr
error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/underscore.rs:6:9
   |
LL | / macro_rules! underscore {
LL | |     () => (
LL | |         _
   | |         ^ `_` not allowed here
LL | |     )
LL | | }
   | |_- in this expansion of `underscore!`
   |
  ::: $DIR/main.rs:5:5
   |
LL |       underscore!();
   |       ------------- in this macro invocation

error: aborting due to previous error

